--- a/CricBook/CricBook/Views/Home/Index.cshtml
+++ b/CricBook/CricBook/Views/Home/Index.cshtml
@@ -1,24 +1,9 @@
-﻿@{Layout = null;}
-
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/Register.css">
-    
-  </head>
-  <body>
-      <div class="container">
-
-        <br />
-        <h1 class="white-text">Welcome to Cricbook</h1>
-        <br />
-        <button class="btn btn-success"><a class="text-light text-decoration-none" href="https://localhost:7201/Home//Login/">Login</a></button>
-        <p>  </p>
-        <button class="btn btn-success"><a class="text-light text-decoration-none" href="https://localhost:7201/Home/Register/">Register</a></button>  
-      </div>
-  </body>
-</html>
+﻿<link rel="stylesheet" href="/css/Index.css">
+<section class = "hero-section">
+    <div class = "overlay">
+        <div>
+        <p class = "hero-welcome one-px-letter-spaceing" style="text-align: center;">Welcome To</p>
+        <p class = "hero-cricbook one-px-letter-spaceing" style="text-align: center;">CRICBOOK</p>
+        </div>
+    </div>         
+</section>
