--- a/CricBook/CricBook/Views/Home/SignupHost.cshtml
+++ b/CricBook/CricBook/Views/Home/SignupHost.cshtml
@@ -4,7 +4,7 @@
             <h2 class = "title">Sign up as Host</h2>
         </div>
         <div class = "signup-div">
-            <form>
+            <form action="https://localhost:7201/Home/RegisterField" method="POST">
                 <input type="text" class="form-control input-field" id="fname" name="fname" placeholder="Enter first name" required>
                 <input type="text" class="form-control input-field" id="lname" name="lname" placeholder="Enter last name" required>
                 <input type="text" class="form-control input-field" id="username" name="username" placeholder="Enter username" required>
@@ -12,7 +12,7 @@
                 <input type="text" class="form-control input-field" id="phoneNumber" name="phoneNumber" placeholder="Enter phone number" required>
                 <input type="password" class="form-control input-field" id="password1" name="password1" placeholder="Enter password" required>
                 <input type="password" class="form-control input-field" id="password2" name="password2" placeholder="Confirm password" required>
-                <button type="submit" class="btn signup-button">Sign up</button>
+                <button type="submit" class="btn signup-button">Proceed</button>
             </form>
         </div>
         <br /><br />
