--- a/CricBook/CricBook/Views/Home/Index.cshtml
+++ b/CricBook/CricBook/Views/Home/Index.cshtml
@@ -7,3 +7,102 @@
         </div>
     </div>         
 </section>
+
+<section class = "about-section">
+    <h2 class = "about-heading">About Us</h2>
+    <p class = "about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac rutrum elit. Nam vehicula fringilla turpis, et tincidunt nisi tincidunt a. Integer id ultrices mi. Proin eu lorem iaculis, finibus eros vitae, rutrum justo. Sed auctor odio ac justo tincidunt finibus. Mauris nec congue orci. Nulla cursus sem id posuere gravida. Morbi ut mauris nec felis viverra venenatis.
+Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer consectetur suscipit nulla in malesuada. Donec euismod fermentum ultrices. Vivamus condimentum auctor cursus. Etiam sit amet lorem enim. Nam pulvinar mi sed velit hendrerit sollicitudin. Maecenas nec feugiat ipsum. Cras nec rhoncus odio.
+Curabitur luctus odio eu urna tincidunt, eu malesuada mauris luctus. Nam malesuada orci nisl, in scelerisque ipsum venenatis vel. In ut est et nisi rutrum pharetra ut et ligula. Proin efficitur, sapien vitae euismod varius, urna nisi rutrum nisi, id gravida risus ipsum non libero. Ut sem erat, condimentum sed turpis ut, dictum venenatis lectus. Nunc et orci auctor, gravida tellus sit amet, commodo est.</p>
+</section>
+
+<section class = "fields-section">
+    <h2 class = "about-heading explore-heading">Explore</h2>
+    <div class = "fields-div">
+      
+        <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>
+
+      <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>
+
+      <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>
+
+      <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>
+
+      <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>
+
+      <div class="field">
+          <img class = "field-img" />
+          <div class = "specs">
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+              <p class = "spec">Lorem ipsum</p>
+          </div>
+          <div class = "button-div">
+              <a class = "nav-link visit-button one-px-letter-spaceing">Visit</a>
+          </div>
+      </div>   
+    </div>
+
+    <div class = "fields-page-link-div">
+        <a href="https://localhost:7201/Home/Fields" class = "nav-link visit-button fields-page-link-button one-px-letter-spaceing">See more</a>
+    </div>
+</section>
+
+<section class = "footer-section">
+    
+</section>
