--- a/CricBook/CricBook/wwwroot/css/Layout.css
+++ b/CricBook/CricBook/wwwroot/css/Layout.css
@@ -30,7 +30,7 @@ body {
 }
 
 .custom-login-button {
-    background-color: #D6CDA4;
+    background-color: white;
     padding: 5px 10px;
     font-size: 16px;
     border-radius: 4px;
