--- a/CricBook/CricBook/Views/Home/Login.cshtml
+++ b/CricBook/CricBook/Views/Home/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿<section class = "login-section">
     <div class = "overlay">
-        <div class = "container">
+        <div class = "container my-container">
             <div class="player-host">
                 <div class="player">
                 <p class = "one-px-letter-spaceing login-as">Login as</p>
