--- a/CricBook/CricBook/wwwroot/css/Index.css
+++ b/CricBook/CricBook/wwwroot/css/Index.css
@@ -20,6 +20,10 @@
     align-items: center; 
 }
 
+.one-px-letter-spaceing {
+    letter-spacing: 1px;
+}
+
 .hero-welcome{
     color: white;
     font-size: 36px;
@@ -28,4 +32,123 @@
 .hero-cricbook{
     color: white;
     font-size: 48px;
+}
+
+.about-section{
+    margin: 40px;
+}
+
+.about-heading {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.about-text{
+    font-size: 18px;
+    text-align: justify;
+}
+
+.fields-section {
+    background-color: #EEF2E6;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.fields-div {
+    margin: 20px;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+}
+
+.field {
+    background-color: #f2f2f2;
+    text-align: center;
+    background-color: white;
+}
+
+.field-img{
+    width: 100%;
+    height: 300px;
+}
+
+.specs {
+    width: 100%;
+    height: 180px;
+    padding: 10px 20px;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: auto;
+    gap: 10px;
+}
+
+.spec {
+    border-left: 4px solid #1C6758;
+    padding-left: 6px;
+    text-align: left;
+    font-size: 16px;
+    width: 100%;
+}
+
+.button-div {
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+}
+
+.visit-button {
+    width: 80px;
+    background-color: #3D8361;
+    padding: 6px 10px;
+    font-size: 18px;
+    border-radius: 4px;
+    color: white;
+}
+
+.visit-button:hover {
+    background-color: #1C6758;
+    cursor: pointer;
+}
+
+.fields-page-link-section {
+    background-color: #3D8361;
+}
+
+.fields-page-link-div {
+    color: white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+}
+
+.fields-page-text {
+    font-size: 22px;
+    margin: auto 0px;
+    margin-right: 10px;
+}
+
+.fields-page-link-button {
+    font-size: 22px;
+    width: 160px;
+    height: 44px;
+    background-color: #3D8361;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: auto 0px;
+}
+
+.fields-page-link-button:hover {
+    background-color: #1C6758;
+}
+
+.footer-section {
+    background-color: #1C6758;
+    height: 300px;
 }
