--- a/CricBook/CricBook/wwwroot/css/Login.css
+++ b/CricBook/CricBook/wwwroot/css/Login.css
@@ -23,6 +23,10 @@
     align-items: center;
 }
 
+.my-container{
+    width: 1200px;
+}
+
 .player-host {
     margin-bottom: 40px;
     display: grid;
@@ -30,41 +34,60 @@
     gap: 40px;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 160px;
 }
 
 .player {
-    background-color: rgb(214, 205, 164, 0.7);
-    height: 200px;
+    background-color: rgb(214, 205, 164, 0.0);
+    height: 160px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     border-radius: 50px 0 0 0;
+    border: 2px solid white;
+    transition: background-color 0.5s;
+}
+
+.player:hover {
+    background-color: rgb(214, 205, 164, 0.7);
 }
 
 .host {
-    background-color: rgb(238, 242, 230, 0.7);
-    height: 200px;
+    background-color: rgb(238, 242, 230, 0.0);
+    height: 160px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     border-radius: 0 50px 0 0;
+    border: 2px solid white;
+    transition: background-color 0.5s;
+}
+
+.host:hover {
+    background-color: rgb(238, 242, 230, 0.7);
 }
 
 .signup {
-    background-color: rgb(61, 131, 97, 0.7);
+    background-color: rgb(61, 131, 97, 0.0);
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 0 0 50px 50px;
+    border: 2px solid white;
+    transition: background-color 0.5s;
+}
+
+.signup:hover {
+    background-color: rgb(61, 131, 97, 0.7);
 }
 
 .login-as {
-    color: #1C6758;
-    font-size: 36px;
+
+    color: white;
+    font-size: 26px;
     margin-bottom: 20px;
 }
 
